Changes in Description

--- a/About.html
+++ b/About.html
@@ -102,7 +102,7 @@
 	<li><strong>Generative AI Apps</strong> - September 2024 to October 2024. Designed and developed multiple apps that utilize AI for text-to-speech, image restoration, and content generation. One notable project was a debating application using OpenAI’s Whisper for transcription and Groq API for generating real-time responses.</li>
 	<li><strong>Deep-Image-Prior Repository Project</strong> - October 2024 to Present. Contributed to the deep-image-prior repository for image restoration tasks, improving image quality through AI-based design transformations and running experiments with various models.</li>
 	<li><strong>Kaar-e-Kamal Welfare Society Mobile App</strong> - September 2024 to Present. developing a mobile app for Kaar-e-Kamal Welfare Society, a non-profit organization, to manage operations across 60 plus cities in Pakistan. The app includes features for donation tracking, volunteer registration, and notifications for urgent cases.</li>
-	<li><strong>Seller on Fiverr</strong> - 2023 to Present. Offering a variety of services, including Flutter mobile app development, website design, and SEO optimization. I have successfully delivered over 100+ projects, gaining a reputation for high-quality work and customer satisfaction.</li>
+	<li><strong>Seller on Fiverr</strong> - 2023 to Present. Offering a variety of services, including Flutter mobile app development, website design, and SEO optimization.</li>
 	<li><strong>E-commerce Seller on Daraz</strong> - 2021 to Present. Managing an e-commerce store on Daraz, selling products ranging from tech gadgets to home essentials. I handle product listings, order management, and customer service to maintain a positive buyer experience.</li>
 </ul>
 
