--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<a href="https://linktr.ee/msaqibsharif" class="page">8</a>
 									<a href="https://linktr.ee/msaqibsharif" class="page">9</a>
 									<a href="https://linktr.ee/msaqibsharif" class="page">10</a>
-									<a href="https://linktr.ee/msaqibsharif" class="next">Next</a>
+									<a href="About.html" class="next">Next</a>
 								</div>
 							</footer>
 
