--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="index.html" class="page active">1</a>
-									<a href="About.html" class="next">Next</a>
+									<a href="About.html" class="next">About</a>
 								</div>
 							</footer>
 
