--- a/About.html
+++ b/About.html
@@ -126,6 +126,15 @@
 
 							</section>
 
+							<!-- Footer -->
+							<footer>
+								<div class="pagination">
+									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="index.html" class="next">Home</a>
+									<a href="About.html" class="page active">About</a>
+								</div>
+							</footer>
+
 					</div>
 
 				<!-- Footer -->
