--- a/About.html
+++ b/About.html
@@ -88,6 +88,12 @@
 
 	</li>
 	<br>
+	<li><strong>Flutter Apps Development</strong> - Oct 2024 - Jan 2025    
+		Completed the Flutter Apps Development Course from the Hunarmand Kamyab Jawan Program via eHunar, gaining expertise in Flutter fundamentals, UI/UX design, API integration, Firebase, and cross-platform app development.
+		<button onclick="window.open('Certificates/Flutter Certifiacte.pdf')" style="font-size: 12px; padding: 5px 10px; background: none; border: none; color: blue; cursor: pointer; text-decoration: underline; float: right; display: inline-block; text-align: center;">Check Certificate</button>
+
+	</li>
+	<br>
 	<li><strong>Over 20 Additional IT-related Courses (without certificates)</strong> - Ongoing, since 2020  
 		Includes courses in advanced programming, machine learning, and cloud technologies to continuously expand technical knowledge.
 	</li>
