--- a/About.html
+++ b/About.html
@@ -136,7 +136,7 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="index.html" class="next">Home</a>
+									<a href="index.html" class="previous">Home</a>
 									<a href="About.html" class="page active">About</a>
 								</div>
 							</footer>
